--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   </head>
   
   <body>
+    <h1>hello</h1>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src= "src/main.jsx"></script>
   </body>
 </html>
